# ReAgent-VM-Current-State

./: .dockerignore  .env.example  .gitignore  BUYER_PROPERTY_MATCHING_VALIDATION_REPORT.md  CLAUDE.md  CLAUDE_CIPHER_ONBOARDING_PROMPT.md  CLAUDE_CRITICAL_FIXES_PROMPT.md  CLOUD_NATIVE_INFRASTRUCTURE_SOLUTION.md  COMPREHENSIVE_SYSTEM_HEALTH_REPORT.md  CRITICAL_FIXES_SUMMARY.md  DEPENDENCY_FORENSIC_ANALYSIS_REPORT.md  DOCKER_BUILD_OPTIMIZATION_STRATEGY.md  DOCKER_OPTIMIZATION_SUMMARY.md  Dockerfile.agents  Dockerfile.api  Dockerfile.celery  Dockerfile.health-monitor  Dockerfile.recovery  GEMINI_CIPHER_ONBOARDING_PROMPT.md  GEMINI_COMPREHENSIVE_CLAUDE_PROMPT_GENERATOR.md  GEMINI_STRATEGIC_REFACTORING_PROMPT.md  MONITORING_RUNBOOKS.md  MULTI_AGENT_ORCHESTRATION_VALIDATION_REPORT.md  Makefile  OPENAI_EMBEDDINGS_VALIDATION_REPORT.md  OPERATIONAL_RUNBOOKS.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_MONITORING_AND_HEALTH_ANALYSIS.md  PRODUCTION_MONITORING_COMPREHENSIVE_REPORT.md  PRODUCTION_MONITORING_SUMMARY.md  PRODUCTION_READINESS_VALIDATION_REPORT.md  PROJECT_ROADMAP.md  README.md  REAGENT_CIPHER_MEMORY_PROTOCOLS.md  REQUIREMENTS_MIGRATION_GUIDE.md  SYSTEM_DESIGN.md  TESTING_STRATEGY.md  URGENT_WEAVIATE_FIX.md  WEAVIATE_VECTOR_VALIDATION_REPORT.md  (+114 more)
.claude/agents/: agent-orchestration-specialist.md  api-integration-expert.md  deployment-ops-expert.md  production-monitoring-expert.md  property-data-detective.md  reagent-builder.md  sydney-market-analyst.md  system-architect.md  vector-ml-optimizer.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20250728_0000_001_initial_schema.py
cipher-memory-templates/: agent_coordination_template.yml  architectural_decision_template.yml  bug_fix_template.yml  feature_development_template.yml
config/exporters/: postgres-queries.yaml
config/nginx/: nginx.conf
config/nginx/conf.d/: reagent.conf
config/postgres/: postgresql.conf
config/redis/: redis.conf
data/: reagent_dev.db
docs/: DATABASE_ERD.md  DATABASE_SETUP_COMPLETE.md  ReAgent Context.md
frontend/: Dockerfile  Dockerfile.dev  package-lock.json  package.json
mock_responses/: domain_search.json
monitoring/alertmanager/: alertmanager.yml
monitoring/prometheus/: prometheus.yml
scripts/: deploy.sh  fix_weaviate_config.sh  validate_env.py  validate_env.sh  weaviate_troubleshooting.md
scripts/deployment/: deploy-production.sh  production-health-check.sh  setup-monitoring.sh  setup-secrets.sh  start-monitoring.sh  validate_api_setup.py
scripts/development/: data_validation_audit.py  load_testing_suite.py  performance-tuning.sh
scripts/maintenance/: backup-full-system.sh  backup-postgres.sh  backup-redis.sh  create_performance_indexes.py  database_integrity_check.sql  disaster-recovery.sh  graceful-restart.sh  graceful-shutdown.sh  production-health-check.sh
scripts/validation/: comprehensive_health_check.py  end_to_end_validation.py  langgraph_workflow_validator.py
sql/: setup_database.sql
sql/init/: 01_create_extensions.sql  02_create_hypertables.sql  03_create_indexes.sql  04_create_tables.sql
src/: __init__.py
src/agents/: __init__.py  base.py  orchestrator.py
src/agents/suburb_signal/: agent.py  (+6 more)
src/api/: __init__.py  main.py
src/config/: settings.py
src/reagent/: __init__.py
src/utils/: __init__.py
ssl/: dhparam.pem  fullchain.pem  privkey.pem
tests/: conftest.py
tests/agents/: test_seller_strategy.py
tests/integration/: test_listings_api.py
(+191 files in other folders)
